// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it disables the button when in progress 1`] = `
Array [
  <span>
    unit test card code
  </span>,
  <button
    disabled={true}
    onClick={[MockFunction]}
  >
    Remove
  </button>,
]
`;

exports[`it renders correctly 1`] = `
Array [
  <span>
    unit test card code
  </span>,
  <button
    disabled={false}
    onClick={[MockFunction]}
  >
    Remove
  </button>,
]
`;
